--- a/backend/auth/src/main/resources/application.yml
+++ b/backend/auth/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: auth-service
   profiles:
-    active: local
+    active: local, jwt, oauth
 
 management:
   endpoints:
