--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -6,4 +6,5 @@ COPY ./ ./
 RUN npm run build
 FROM nginx
 EXPOSE 3000
+COPY ./default.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /usr/src/app/dist/ /usr/share/nginx/html
