:wrench: 사용하는 파일 변경

--- a/backend/auth/src/main/resources/application.yml
+++ b/backend/auth/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: auth-service
   profiles:
-    active: local, jwt, oauth
+    active: prod, jwt, oauth
 
 management:
   endpoints:
