--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.0.3",
+    "apexcharts": "^3.44.0",
     "axios": "^1.5.1",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "framer-motion": "^10.16.4",
     "i18next": "^23.6.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.1",
