--- a/backend/gateway/.gitignore
+++ b/backend/gateway/.gitignore
@@ -37,4 +37,5 @@ out/
 .vscode/
 
 /src/main/resources/application-local.yml
+/src/main/resources/application-prod.yml
 /src/main/resources/bootstrap.yml
