--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.0.3",
+    "@speechly/speech-recognition-polyfill": "^1.3.0",
+    "@types/react-speech-recognition": "^3.9.3",
     "apexcharts": "^3.44.0",
     "axios": "^1.5.1",
     "eslint-config-airbnb-typescript": "^17.1.0",
@@ -18,10 +20,10 @@
     "i18next": "^23.6.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
-    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.1",
     "react-router-dom": "^6.17.0",
+    "react-speech-recognition": "^3.10.0",
     "react-youtube": "^10.1.0",
     "styled-components": "^6.1.0",
     "zustand": "^4.4.3"
