--- a/backend/auth/.gitignore
+++ b/backend/auth/.gitignore
@@ -39,3 +39,5 @@ out/
 /src/main/resources/application-oauth.yml
 /src/main/resources/application-jwt.yml
 /src/main/resources/application-prod.yml
+
+src/main/resources/static/docs/
