:seedling: API 주소 변경

--- a/backend/gateway/src/main/resources/application.yml
+++ b/backend/gateway/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
         - id: song-service
           uri: lb://SONG-SERVICE
           predicates:
-            - Path=/song/**
+            - Path=/api/song/**
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
   datasource:
