--- a/backend/gateway/src/main/resources/application.yml
+++ b/backend/gateway/src/main/resources/application.yml
@@ -12,19 +12,31 @@ spring:
         - id: auth-service
           uri: lb://AUTH-SERVICE
           predicates:
-            - Path=/api/**
+            - Path=/login/oauth2/**, /oauth2/**, /api/auth/user/reissue
+
         - id: service-discovery
           uri: lb://SERVICE-DISCOVERY
           predicates:
             - Path=/api/client/**
+
         - id: gateway
           uri: lb://GATEWAY
           predicates:
             - Path=/api/gateway/**
+
         - id: song-service
           uri: lb://SONG-SERVICE
           predicates:
             - Path=/api/song/**
+          filters:
+            - AuthorizationHeaderFilter
+
+        - id: auth-service
+          uri: lb://AUTH-SERVICE
+          predicates:
+            - Path=/api/**
+          filters:
+            - AuthorizationHeaderFilter
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
