--- a/backend/gateway/src/main/resources/application.yml
+++ b/backend/gateway/src/main/resources/application.yml
@@ -28,8 +28,8 @@ spring:
           uri: lb://SONG-SERVICE
           predicates:
             - Path=/api/song/**
-          filters:
-            - AuthorizationHeaderFilter
+#          filters:
+#            - AuthorizationHeaderFilter
 
         - id: auth-service
           uri: lb://AUTH-SERVICE
