:lipstick: Contents 캐러셀
contents 캐러셀

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.17.0",
     "react-youtube": "^10.1.0",
     "styled-components": "^6.1.0",
+    "swiper": "^11.0.3",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
