Gateway drama, show 라우팅 추가

--- a/backend/gateway/src/main/resources/application.yml
+++ b/backend/gateway/src/main/resources/application.yml
@@ -25,7 +25,15 @@ spring:
             - Path=/api/song/**
 #          filters:
 #            - AuthorizationHeaderFilter
+        - id: show-service
+          uri: lb://SHOW-SERVICE
+          predicates:
+            - Path=/api/show/**
 
+        - id: drama-service
+          uri: lb://drama-SERVICE
+          predicates:
+            - Path=/api/drama/**
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
