--- a/backend/gateway/src/main/resources/application.yml
+++ b/backend/gateway/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
             allowedOrigins:
               - "http://localhost:5173"
               - "http://127.0.0.1:5173"
+            allow-credentials: true
+            allowedHeaders: '*'
             allowedMethods:
               - GET
               - POST
