Gateway에 ranking 서비스 라우팅 추가

--- a/backend/gateway/src/main/resources/application.yml
+++ b/backend/gateway/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
         - id: song-service
           uri: lb://SONG-SERVICE
           predicates:
-            - Path=/api/song/**
+            - Path=/api/song/**, /api/ranking/**
 #          filters:
 #            - AuthorizationHeaderFilter
         - id: show-service
@@ -39,6 +39,7 @@ spring:
           uri: lb://CHATGPT-SERVICE
           predicates:
             - Path=/api/chatgpt/**
+
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
