--- a/backend/auth/src/main/resources/application.yml
+++ b/backend/auth/src/main/resources/application.yml
@@ -6,6 +6,11 @@ spring:
     name: auth-service
   profiles:
     active: prod, jwt, oauth
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 100MB
+      max-request-size: 100MB
 
 management:
   endpoints:
