:recycle: 전체 가수 조회 수정

--- a/backend/song/src/main/resources/application-local.yml
+++ b/backend/song/src/main/resources/application-local.yml
@@ -27,7 +27,7 @@ spring:
       driver-class-name: ${spring.datasource.driver-class-name}
       jdbc-url: ${spring.datasource.url}
       pool-name: jpa-hikari-pool
-    password: '1234'
+    password: 'ssafy1234!!'
     username: root
     url: jdbc:mysql://k9e204.p.ssafy.io:3306/free?characterEncoding=UTF-8&serverTimezone=UTC
 
