--- a/backend/show/build.gradle
+++ b/backend/show/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.17'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id "org.asciidoctor.jvm.convert" version '3.3.2'
+	id 'com.epages.restdocs-api-spec' version '0.16.2'
 }
 
 group = 'com.ddoya'
@@ -23,6 +25,30 @@ repositories {
 
 ext {
 	set('springCloudVersion', "2021.0.8")
+	snippetsDir = file('build/generated-snippets')
+}
+asciidoctor { // add
+	dependsOn test
+	attributes 'snippets': snippetsDir
+	inputs.dir snippetsDir
+}
+
+asciidoctor.doFirst { // add
+	println("---------------- delete present asciidoctor.")
+	delete file('src/main/resources/static/docs')
+}
+
+bootJar { // add
+	dependsOn asciidoctor
+	copy {
+		from "${asciidoctor.outputDir}"
+		into 'src/main/resources/static/docs'
+	}
+}
+
+test { // 필수
+	outputs.dir snippetsDir
+	useJUnitPlatform()
 }
 
 dependencies {
