gateway에 발음평가 추가

--- a/backend/gateway/src/main/resources/application.yml
+++ b/backend/gateway/src/main/resources/application.yml
@@ -56,6 +56,11 @@ spring:
           predicates:
             - Path=/api/chatgpt/**
 
+        - id: evaluate-service
+          uri: lb://EVALUATE-SERVICE
+          predicates:
+            - Path=/api/evaluate/**
+
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
