발음평가 서비스에 필터 적용

--- a/backend/gateway/src/main/resources/application.yml
+++ b/backend/gateway/src/main/resources/application.yml
@@ -76,7 +76,8 @@ spring:
           uri: lb://EVALUATE-SERVICE
           predicates:
             - Path=/api/evaluate/**
-
+          filters:
+            - AuthorizationHeaderFilter
 
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
