--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "short_name": "Nextlevel",
-    "name": "Nextlevel",
-    "start_url": "/",
-    "display": "standalone",
-    "theme_color": "#FF6D60",
-    "background_color": "#FBFCEC",
+  "name": "Nextlevel",
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
   "icons": [
     {
       "src": "/icon/android/android-launchericon-48-48.png",
@@ -36,5 +36,6 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "dir": "auto"
 }
